--- a/package.json
+++ b/package.json
@@ -21,5 +21,18 @@
   "bugs": {
     "url": "https://github.com/jgregoriorincon/AppNodeMongo/issues"
   },
-  "homepage": "https://github.com/jgregoriorincon/AppNodeMongo#readme"
+  "homepage": "https://github.com/jgregoriorincon/AppNodeMongo#readme",
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.16.1",
+    "connect-multiparty": "^2.0.0",
+    "express": "^4.14.1",
+    "jwt-simple": "^0.5.1",
+    "moment": "^2.17.1",
+    "mongoose": "^4.8.4",
+    "mongoose-pagination": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  }
 }
