--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "mongoose-pagination": "^1.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt-nodejs": "0.0.30",
+    "@types/body-parser": "0.0.34",
+    "@types/express": "^4.0.35",
+    "@types/node": "^7.0.5",
     "nodemon": "^1.11.0"
   }
 }
