--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,8 @@
         "sourceMap": true,
         "strictNullChecks": true,
         "noEmitOnError": true
-    }
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
