--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "express": "^4.14.1",
     "jwt-simple": "^0.5.1",
     "moment": "^2.17.1",
-    "mongoose": "^4.8.4",
-    "mongoose-paginate": "^5.0.3"
+    "mongoose": "^4.8.4"
   },
   "devDependencies": {
     "@types/bcrypt-nodejs": "0.0.30",
@@ -39,7 +38,6 @@
     "@types/express": "^4.0.35",
     "@types/jwt-simple": "^0.5.32",
     "@types/mongoose": "^4.7.8",
-    "@types/mongoose-paginate": "^5.0.4",
     "@types/node": "^7.0.5",
     "nodemon": "^1.11.0"
   }
