--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
     "jwt-simple": "^0.5.1",
     "moment": "^2.17.1",
     "mongoose": "^4.8.4",
-    "mongoose-paginate": "^5.0.3"
+    "mongoose-paginate": "^5.0.3",
+    "mongoose-promise": "0.0.1"
   },
   "devDependencies": {
     "@types/bcrypt-nodejs": "0.0.30",
     "@types/body-parser": "0.0.34",
     "@types/express": "^4.0.35",
     "@types/jwt-simple": "^0.5.32",
+    "@types/mongoose": "^4.7.8",
+    "@types/mongoose-paginate": "^5.0.4",
+    "@types/mongoose-promise": "^4.5.5",
     "@types/node": "^7.0.5",
     "nodemon": "^1.11.0"
   }
