--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "moment": "^2.17.1",
     "mongoose": "^4.8.4",
     "mongoose-paginate": "^5.0.3",
-    "mongoose-promise": "0.0.1"
+    "mongoose-promise": "0.0.1",
+    "multer": "^1.3.0"
   },
   "devDependencies": {
     "@types/bcrypt-nodejs": "0.0.30",
@@ -42,6 +43,7 @@
     "@types/mongoose": "^4.7.8",
     "@types/mongoose-paginate": "^5.0.4",
     "@types/mongoose-promise": "^4.5.5",
+    "@types/multer": "0.0.33",
     "@types/node": "^7.0.5",
     "nodemon": "^1.11.0"
   }
